--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,24 +13,40 @@
     <header class="row">
 
       <div class="col-3">
-        LOGO
+        <div class="circle">
+          <br />
+
+          Tennis Quotes
+          
+          <br />
+
+          From 
+
+          <br />
+
+          Tennis Addicts!
+
+        </div>
+        
       </div>
     
-      <div class="col-4">
+      <div class="col-4 slogan">
 
         Splurting out unsolicited advice about entrepreneurship since 2016
       
       </div>
 
-      <div class="col-5">
+      <div class="col-5 links">
 
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
     
     </header>
 
-    <br class="clear" />
+    <hr />
     
+    <br class="clear" />
+
     <%= yield %>
   </body>
 </html>
