--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -56,10 +56,23 @@ hr {
 h1 {
   font-family: 'sailregular', sans-serif;
   font-weight: bold;
-  font-size: 48px;
+  font-size: 72px;
 
 }
 
 h2 {
-  font-family: 'Courgette', cursive;
+  
+}
+
+.next-quote {
+  color:#f61d0e;
+  font-family: 'sailregular', sans-serif;
+  font-size:20px;
+}
+
+.footer-blurb {
+  font-family: 'sailregular';
+  font-style: italic;
+  text-align: right;
+  font-size: 10px;
 }
