--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,20 +13,22 @@
     <header class="row">
 
       <div class="col-3">
-        <div class="circle">
-          <br />
+        <%= link_to root_path, class: 'logo' do %>
+          <div class="circle">
+            <br />
 
-          Tennis Quotes
-          
-          <br />
+            Tennis Quotes
+            
+            <br />
 
-          From 
+            From 
 
-          <br />
+            <br />
 
-          Tennis Addicts!
+            Tennis Addicts!
 
-        </div>
+          </div>
+        <% end %>
         
       </div>
     
@@ -38,7 +40,7 @@
 
       <div class="col-5 links">
 
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %>
       </div>
     
@@ -58,7 +60,7 @@
         <div class="row">
           
           <div class="col-6">
-            <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
 
           <div class="col-6 footer blurb">
