--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
         <div class="row">
           
           <div class="col-6">
-            <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more", new_quote_path, class: 'next-quote' %>
           </div>
 
           <div class="col-6 footer blurb">
