--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,17 +32,16 @@
         
       </div>
     
-      <div class="col-4 slogan">
+      <div class="col col-sm-4 hidden-xs-down slogan">
 
         Splurting out unsolicited advice about tennis since 2019
       
       </div>
 
-      <div class="col-5 links">
-
+      <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
         
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
-        
+        &nbsp; &nbsp;
         <%= link_to 'About', about_path %>
       </div>
     
@@ -64,15 +63,16 @@
 
         <div class="modal-body">
           
-          <%= f.input :saying %>
-          <%= f.input :author %>
+          <%= f.input :saying, label: "What is the saying you want to add?", placeholder: "Tennis Rocks!" %>
+          <br />
+          <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Jane Doe" %>
+
           <br />
           <%= f.submit 'Create', class: 'btn btn-danger' %>
           <% end %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
@@ -96,11 +96,11 @@
       <div class="container">
         <div class="row">
           
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <%= link_to "This isn't enough, I need more", new_quote_path, class: 'next-quote' %>
           </div>
 
-          <div class="col-6 footer blurb">
+          <div class="col-12-col col-sm-6 footer blurb">
             Hope to see you on the courts soon! <a href=https://amber-mcgregor.netlify.com">[Amber McGregor]</a><br />
             Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
 
