--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -43,15 +43,11 @@
   padding-top: 26px;
 }
 
-.links:hover {
-   text-decoration: none;
-}
-
 .links a {
   color: 000eff;
   font-size: 25px;
   border-bottom: 1px solid #09487f;
-  font-family: 'sailregular', sans-serif;
+  font-family: 'poppinsregular', sans-serif;
   font-weight: bold;
 }
 
@@ -64,7 +60,7 @@ hr {
 }
 
 h1 {
-  font-family: 'sailregular', sans-serif;
+  font-family: 'poppinsregular', sans-serif;
   font-weight: bold;
   font-size: 60px;
 
@@ -74,7 +70,7 @@ h1 {
 
 .next-quote {
   color:#f61d0e;
-  font-family: 'sailregular', sans-serif;
+  font-family: 'poppinsregular', sans-serif;
    border-bottom: 1px solid;
   font-size:20px;
 }
@@ -84,7 +80,7 @@ h1 {
 }
 
 .footer-blurb {
-  font-family: 'sailregular';
+  font-family: 'poppinsregular';
   font-style: italic;
   text-align: right;
   font-size: 10px;
@@ -103,17 +99,17 @@ h1 {
 }
 
 .modal {
-   font-family: 'sailregular';
+   font-family: 'poppinsregular';
 }
 
 h2 span {
   color: #dddddd;
-  font-family: 'sailregular', sans-serif;
+  font-family: 'poppinsregular', sans-serif;
 }
 
 
 h2 {
-  font-family: 'sailregular', sans-serif;
+  font-family: 'poppinsregular', sans-serif;
 }
 
 ::selection {
