--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,6 +1,6 @@
 <h2>
   <span>SPLURTY / No. <%= @quote.id %></span>
-  &nbsp &nbsp Here's the <u>best unsolicited Tennis Quote</u> you can get!
+  &nbsp Here's the <u>best unsolicited Tennis Quote</u> there is!
 </h2>
 <br />
 <br />
