--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
       <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
         
-        <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+        <%= link_to 'Contribute', new_quote_path , data: {toggle: 'modal', target: '#myModal'} %>
         &nbsp; &nbsp;
         <%= link_to 'About', about_path %>
       </div>
@@ -99,7 +99,7 @@
         <div class="row">
           
           <div class="col-12 col-sm-6">
-            <%= link_to "This isn't enough, I need more", new_quote_path, class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more", quotes_path, class: 'next-quote' %>
           </div>
 
           <div class="col-12-col col-sm-6 footer blurb">
