--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,7 +99,7 @@
         <div class="row">
           
           <div class="col-12 col-sm-6">
-            <%= link_to "This isn't enough, I need more", quotes_path, class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
 
           <div class="col-12-col col-sm-6 footer blurb">
