--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header class="row">
 
       <div class="col-3">
-        <%= link_to root_path, class: 'logo' do %>
+        <%= link_to quotes_path, class: 'logo' do %>
           <div class="circle">
             <br />
 
@@ -99,7 +99,7 @@
         <div class="row">
           
           <div class="col-12 col-sm-6">
-            <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more", quotes_path, class: 'next-quote' %>
           </div>
 
           <div class="col-12-col col-sm-6 footer blurb">
